--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,27 @@
-click==8.0.4
-Flask==2.0.3
+alembic==1.7.6
+bcrypt==3.2.0
+cffi==1.15.0
+click==7.1.2
+Flask==1.1.4
+Flask-Bcrypt==0.7.1
+Flask-Login==0.5.0
+Flask-Migrate==2.7.0
+Flask-Script==2.0.6
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.0.0
+greenlet==1.1.2
 gunicorn==20.1.0
-itsdangerous==2.1.0
-Jinja2==3.0.3
-MarkupSafe==2.1.0
-Werkzeug==2.0.3
+importlib-metadata==4.11.2
+importlib-resources==5.4.0
+itsdangerous==1.1.0
+Jinja2==2.11.3
+Mako==1.1.6
+MarkupSafe==2.0.1
+psycopg2==2.9.3
+psycopg2-binary==2.9.3
+pycparser==2.21
+six==1.16.0
+SQLAlchemy==1.4.32
+Werkzeug==1.0.1
+WTForms==3.0.1
+zipp==3.7.0
